[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "cascadia-rain"
version     = "1.2.0"
description = "Terminal rain animation"
readme      = "README.md"
license     = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "rich>=14.3.3",
    "pyfiglet>=1.0.4",
]

# Registers `cascadia` as a shell command when installed via pip install -e .
[project.scripts]
cascadia = "main:main"

[tool.setuptools]
py-modules = ["main"]
